--- a/SZMasterDetailDemo/Base.lproj/MainMenu.xib
+++ b/SZMasterDetailDemo/Base.lproj/MainMenu.xib
@@ -10,10 +10,10 @@
         <customObject id="-3" userLabel="Application"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
-                <menuItem title="SZMasterDetailDemo" id="56">
-                    <menu key="submenu" title="SZMasterDetailDemo" systemMenu="apple" id="57">
+                <menuItem title="NSPopUpButtonDemo" id="56">
+                    <menu key="submenu" title="NSPopUpButtonDemo" systemMenu="apple" id="57">
                         <items>
-                            <menuItem title="About SZMasterDetailDemo" id="58">
+                            <menuItem title="About NSPopUpButtonDemo" id="58">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-2" id="142"/>
@@ -32,7 +32,7 @@
                             <menuItem isSeparatorItem="YES" id="144">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Hide SZMasterDetailDemo" keyEquivalent="h" id="134">
+                            <menuItem title="Hide NSPopUpButtonDemo" keyEquivalent="h" id="134">
                                 <connections>
                                     <action selector="hide:" target="-1" id="367"/>
                                 </connections>
@@ -51,7 +51,7 @@
                             <menuItem isSeparatorItem="YES" id="149">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Quit SZMasterDetailDemo" keyEquivalent="q" id="136">
+                            <menuItem title="Quit NSPopUpButtonDemo" keyEquivalent="q" id="136">
                                 <connections>
                                     <action selector="terminate:" target="-3" id="448"/>
                                 </connections>
@@ -644,7 +644,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="492">
                         <items>
-                            <menuItem title="SZMasterDetailDemo Help" keyEquivalent="?" id="493">
+                            <menuItem title="NSPopUpButtonDemo Help" keyEquivalent="?" id="493">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="494"/>
                                 </connections>
